--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -119,19 +119,25 @@
       margin: 0px;
       padding: 0px;
       list-style: none;
-    }
 
-    ul.tabs li {
-      background: none;
-      color: #222;
-      display: inline-block;
-      padding: 10px 15px;
-      cursor: pointer;
-    }
+      .tab-link {
+        background: none;
+        color: #222;
+        display: inline-block;
+        cursor: pointer;
 
-    ul.tabs li.current-tab {
-      background: #ededed;
-      color: #222;
+        .close:before, .close:after {
+          position: absolute;
+          left: 8px;
+          height: 20px;
+        }
+
+        .tab-name {
+          text-decoration: none;
+          color: #222222;
+          padding: 0.75em 1.25em;
+        }
+      }
     }
   }
 }
