--- a/css/controlElements.css
+++ b/css/controlElements.css
@@ -5,7 +5,6 @@ Example: <a href="#" class="close">
 .close {
   position: relative;
   float: right;
-  top: 5%;
   width: 20px;
   height: 20px;
   opacity: 0.3; }
@@ -16,7 +15,6 @@ Example: <a href="#" class="close">
 .close:before, .close:after {
   position: absolute;
   left: 8px;
-  top: 4px;
   content: ' ';
   height: 24px;
   width: 4px;
@@ -27,5 +25,16 @@ Example: <a href="#" class="close">
 
 .close:after {
   transform: rotate(-45deg); }
+
+.tab-link {
+  padding: 4px; }
+  .tab-link .close:before, .tab-link .close:after {
+    position: absolute;
+    left: 8px;
+    height: 20px; }
+  .tab-link .tab-name {
+    text-decoration: none;
+    color: #222222;
+    padding: inherit; }
 
 /*# sourceMappingURL=controlElements.css.map */
