--- a/css/controlElements.scss
+++ b/css/controlElements.scss
@@ -2,11 +2,9 @@
 Close element
 Example: <a href="#" class="close">
 */
-
 .close {
   position: relative;
   float: right;
-  top: 5%;
   width: 20px;
   height: 20px;
   opacity: 0.3;
@@ -17,7 +15,6 @@ Example: <a href="#" class="close">
 .close:before, .close:after {
   position: absolute;
   left: 8px;
-  top: 4px;
   content: ' ';
   height: 24px;
   width: 4px;
@@ -29,3 +26,25 @@ Example: <a href="#" class="close">
 .close:after {
   transform: rotate(-45deg);
 }
+
+
+#motif-list-selected {
+}
+
+
+.tab-link {
+  padding: 4px;
+
+  .close:before, .close:after {
+    position: absolute;
+    left: 8px;
+    height: 20px;
+  }
+
+  .tab-name {
+    text-decoration: none;
+    color: #222222;
+    padding: inherit;
+  }
+}
+
