--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -13,7 +13,7 @@ $topNav-secondaryBoxShadow: #ff8358;
 
 
 //nav-sidebar
-$sideNav-initialWidth: 4.0rem;
+$sideNav-initialWidth: 0;//4.0rem;
 $sideNav-mainColor: #2680F3;
 
 
