--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -70,7 +70,7 @@
 
     .chosen-motif {
       display: inline-block;
-      margin: 0 10px 10px 10px;
+      margin: 0 5px 5px 5px;
       padding: 2px 8px 2px 2px;
       border-radius: 10px;
       border: 1px solid black;
@@ -112,7 +112,6 @@
 
 #sequence-input-cmp {
   background-color: $topNav-primaryMenuBackground;
-  padding: 10px 10px 10px 10px;
 
   #sequence-tabs {
     ul.tabs {
@@ -121,6 +120,11 @@
       list-style: none;
 
       .tab-link {
+        border: 2px solid #999;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        border-bottom: none;
+
         background: none;
         color: #222;
         display: inline-block;
@@ -138,8 +142,39 @@
           padding: 0.75em 1.25em;
         }
       }
+
+      .current-tab {
+        border-bottom-color: #e9e9e9;
+        background-color: #e9e9e9;
+
+        top: 6px;
+        padding-bottom: 10px;
+      }
+    }
+  }
+
+  .controls {
+    border: 2px solid #999;
+    border-radius: 2px;
+    background-color: #e9e9e9;
+    padding: 15px;
+
+    .button-container{
+      display: inline-block;
+      border: 2px solid #999;
+      border-radius: 5px;
+
+
+      .interface-button {
+        outline: none;
+        border-right: 2px solid #999;
+        margin: 0;
+      }
+
+      .interface-button:last-child {
+        border-right: none;
+      }
     }
   }
 }
 
-//Tabs
