--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -66,7 +66,7 @@ ul {
         text-decoration: none; }
   .nav > .search-container {
     padding: 10px 24px 10px 10px;
-    margin-left: 3.6rem; }
+    margin-left: 0; }
     .nav > .search-container > #search {
       display: inline-block;
       width: 320px;
