--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -13,7 +13,7 @@ body {
   background-color: #dadada; }
 
 .interface-area {
-  margin-left: 4rem;
+  margin-left: 0;
   margin-top: 90px; }
 
 #sequence-input, #result {
@@ -22,10 +22,9 @@ body {
 .interface-button {
   color: black;
   background-color: #e9e9e9;
-  border: 1px solid #999;
-  border-radius: 5px;
+  /*border: 2px solid #999;
+  border-radius: 5px;*/
   position: relative;
-  display: inline-block;
   line-height: 30px;
   margin-right: 0.333em;
   padding: 0.5em 1em;
@@ -42,7 +41,7 @@ body {
   color: #a3a3a3; }
 
 .interface-component {
-  padding: 0 10px 0 10px;
+  padding: 10px 10px 10px 10px;
   margin-bottom: 15px; }
 
 .round {
