--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -32,11 +32,11 @@ body {
   color: $icon-default-color;
 
   background-color:#e9e9e9;
-  border: 1px solid #999;
-  border-radius: 5px;
+  /*border: 2px solid #999;
+  border-radius: 5px;*/
 
   position: relative;
-  display: inline-block;
+  //display: inline-block;
 
   line-height: 30px;
   margin-right: 0.333em;
@@ -48,7 +48,6 @@ body {
   overflow: hidden;
 
   text-decoration: none;
-
 }
 
 .interface-button:hover {
@@ -59,7 +58,7 @@ body {
 }
 
 .interface-component {
-  padding: 0 10px 0 10px;
+  padding: 10px 10px 10px 10px;
   margin-bottom: 15px;
 }
 
