--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -44,6 +44,9 @@ $icon-active-color: #a3a3a3;
 $button-bg: $topNav-primaryMenuBackground;
 
 
+//tabs
+$sideTab-width: 200px;
+
 //global features
 $border-radius: 5px;
 
