--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -16,7 +16,7 @@ body {
   margin-left: 0;
   margin-top: 90px; }
 
-#sequence-input, #result {
+#sequence-input, #result, #result-cmp .tab-result-sequence {
   border: 2px solid black; }
 
 .interface-button {
