--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -46,6 +46,7 @@ $button-bg: $topNav-primaryMenuBackground;
 
 //tabs
 $sideTab-width: 200px;
+$resultTab-height: 70px;
 
 //global features
 $border-radius: 5px;
