--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -110,7 +110,11 @@
       #sequence-input-cmp .controls .button-container .interface-button {
         outline: none;
         border-right: 2px solid #999;
-        margin: 0; }
+        margin: 0;
+        text-align: center; }
+        #sequence-input-cmp .controls .button-container .interface-button span {
+          display: inline-block;
+          width: 150px; }
       #sequence-input-cmp .controls .button-container .interface-button:last-child {
         border-right: none; }
 
