--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -2,7 +2,8 @@
   margin-top: 10px;
   background-color: #ededf2;
   border-radius: 10px;
-  box-shadow: 0 1px 1px 0 white;
+  border: 1px solid #A3A3A3;
+  border-top: none;
   min-width: 500px; }
   .suggestions .suggestion {
     min-height: 46px;
@@ -71,18 +72,18 @@
     display: none; }
 
 #sequence-input-cmp {
-  background-color: #ededf2; }
+  background-color: #dadada; }
   #sequence-input-cmp #sequence-tabs ul.tabs {
     margin: 0px;
     padding: 0px;
     list-style: none; }
     #sequence-input-cmp #sequence-tabs ul.tabs .tab-link {
-      border: 2px solid #999;
+      border: 2px solid #A3A3A3;
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
       border-bottom: none;
       background: none;
-      color: #222;
+      color: black;
       display: inline-block;
       cursor: pointer; }
       #sequence-input-cmp #sequence-tabs ul.tabs .tab-link .close:before, #sequence-input-cmp #sequence-tabs ul.tabs .tab-link .close:after {
@@ -91,25 +92,26 @@
         height: 20px; }
       #sequence-input-cmp #sequence-tabs ul.tabs .tab-link .tab-name {
         text-decoration: none;
-        color: #222222;
+        color: inherit;
         padding: 0.75em 1.25em; }
     #sequence-input-cmp #sequence-tabs ul.tabs .current-tab {
-      border-bottom-color: #e9e9e9;
-      background-color: #e9e9e9;
+      border-bottom-color: #ededf2;
+      background-color: #ededf2;
       top: 6px;
       padding-bottom: 10px; }
   #sequence-input-cmp .controls {
-    border: 2px solid #999;
+    border: 2px solid #A3A3A3;
     border-radius: 2px;
-    background-color: #e9e9e9;
+    background-color: #ededf2;
     padding: 15px; }
     #sequence-input-cmp .controls .button-container {
       display: inline-block;
-      border: 5px solid #999;
-      border-radius: 5px; }
+      border: 2px solid #A3A3A3;
+      border-radius: 5px;
+      background-color: #dadada; }
       #sequence-input-cmp .controls .button-container .interface-button {
         outline: none;
-        border-right: 2px solid #999;
+        border-right: 2px solid #A3A3A3;
         margin: 0;
         text-align: center; }
         #sequence-input-cmp .controls .button-container .interface-button span {
@@ -127,7 +129,7 @@
     float: left;
     height: inherit;
     width: 3em;
-    border: 2px solid #999;
+    border: 2px solid #A3A3A3;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-right: none;
