--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -30,7 +30,7 @@ body {
 
 .interface-button {
   color: $icon-default-color;
-  background-color:#e9e9e9;
+  //background-color:#e9e9e9;
   position: relative;
 
   line-height: 30px;
