--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -42,6 +42,7 @@ $icon-default-color: black;
 $icon-hover-color: #797979;
 $icon-active-color: #a3a3a3;
 $button-bg: $topNav-primaryMenuBackground;
+$sequence-input-borders:#A3A3A3;
 
 
 //tabs
