--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -57,7 +57,7 @@
         margin: 4px;
         vertical-align: middle;
         background-color: white;
-        border: none;
+        border: 2px transparent solid;
         border-radius: 5px;
         font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B";
         font-size: 16px;
@@ -67,7 +67,7 @@
         border: none;
         background-color: white; }
     #motif-list-selected-cmp #motif-list-selected .motif-result-hover .motif-title {
-      background-color: salmon; }
+      border-color: salmon; }
   #motif-list-selected-cmp #motif-list-selected:empty {
     display: none; }
 
