--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -141,7 +141,7 @@
         .tab-name {
           text-decoration: none;
           color: inherit;
-          padding: 0.75em 1.25em;
+          padding: 0.1em 1.4em 0.1em 1em;
         }
       }
 
