--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -24,7 +24,7 @@ body {
   margin-top: 2 * $topNav-navLineHeight + 10px;
 }
 
-#sequence-input, #title-input, #result-cmp .tab-result-sequence {
+#sequence-input, #title-input{
   border: 2px solid black;
 }
 
