-added clear before file upload
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -45,7 +45,7 @@ $button-bg: $topNav-primaryMenuBackground;
 $sequence-input-borders:#A3A3A3;
 
 
-//tabs
+//sequenceInput
 $sideTab-width: 200px;
 $resultTab-height: 70px;
 
