--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -72,33 +72,46 @@
     display: none; }
 
 #sequence-input-cmp {
-  background-color: #dadada; }
-  #sequence-input-cmp #sequence-tabs ul.tabs {
-    margin: 0px;
-    padding: 0px;
-    list-style: none; }
-    #sequence-input-cmp #sequence-tabs ul.tabs .tab-link {
-      border: 2px solid #A3A3A3;
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      border-bottom: none;
-      background: none;
-      color: black;
-      display: inline-block;
-      cursor: pointer; }
-      #sequence-input-cmp #sequence-tabs ul.tabs .tab-link .close:before, #sequence-input-cmp #sequence-tabs ul.tabs .tab-link .close:after {
-        position: absolute;
-        left: 8px;
-        height: 20px; }
-      #sequence-input-cmp #sequence-tabs ul.tabs .tab-link .tab-name {
-        text-decoration: none;
-        color: inherit;
-        padding: 0.75em 1.25em; }
-    #sequence-input-cmp #sequence-tabs ul.tabs .current-tab {
-      border-bottom-color: #ededf2;
-      background-color: #ededf2;
-      top: 6px;
-      padding-bottom: 10px; }
+  background-color: #dadada;
+  /*#sequence-tabs {
+    ul.tabs {
+      margin: 0px;
+      padding: 0px;
+      list-style: none;
+
+      .tab-link {
+        border: 2px solid $sequence-input-borders;//#999;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        border-bottom: none;
+
+        background: none;
+        color: black;;
+        display: inline-block;
+        cursor: pointer;
+
+        .close:before, .close:after {
+          position: absolute;
+          left: 8px;
+          height: 20px;
+        }
+
+        .tab-name {
+          text-decoration: none;
+          color: inherit;
+          padding: 0.75em 1.25em;
+        }
+      }
+
+      .current-tab {
+        border-bottom-color: $topNav-primaryMenuBackground;
+        background-color: $topNav-primaryMenuBackground;
+
+        top: 6px;
+        padding-bottom: 10px;
+      }
+    }
+  }*/ }
   #sequence-input-cmp .controls {
     border: 2px solid #A3A3A3;
     border-radius: 2px;
@@ -120,38 +133,58 @@
       #sequence-input-cmp .controls .button-container .interface-button:last-child {
         border-right: none; }
 
-#result-cmp .tab-result {
-  height: 70px;
-  line-height: 70px;
-  margin: 1em 0 1em 0; }
-  #result-cmp .tab-result .tab-result-name {
-    font-size: 15px;
-    float: left;
-    height: inherit;
-    width: 3em;
-    border: 2px solid #A3A3A3;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-right: none;
-    background: none;
-    color: #222;
-    display: inline-block;
-    cursor: pointer;
-    text-align: left;
-    text-decoration: none;
-    outline: none;
-    padding-left: 0.3em; }
-  #result-cmp .tab-result .tab-result-sequence {
-    font-family: "Courier New", "Times New Roman";
-    font-size: 23px;
-    margin-left: 3em;
-    background-color: #ffffff;
-    height: inherit;
-    line-height: inherit; }
-#result-cmp .current-tab-result {
-  border-bottom-color: #e9e9e9;
-  background-color: #e9e9e9;
-  top: 6px;
-  padding-bottom: 10px; }
+#result-cmp {
+  position: relative; }
+  #result-cmp #result-tabs {
+    width: 75px;
+    position: absolute; }
+    #result-cmp #result-tabs .tab-result {
+      height: 70px;
+      line-height: 70px;
+      margin: 5px 0 10px 0;
+      border: 2px solid #A3A3A3;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      border-right: none; }
+      #result-cmp #result-tabs .tab-result .tab-result-name {
+        font-size: 15px;
+        float: left;
+        height: inherit;
+        width: 3em;
+        background: none;
+        color: #222;
+        display: inline-block;
+        cursor: pointer;
+        text-align: left;
+        text-decoration: none;
+        outline: none;
+        padding-left: 0.3em; }
+    #result-cmp #result-tabs .current-tab {
+      background-color: #ededf2; }
+  #result-cmp #result-sequences {
+    margin-left: 80px;
+    margin-top: 5px;
+    top: 0;
+    left: 0;
+    overflow-x: scroll;
+    background-color: white;
+    border-radius: 5px;
+    border-left: solid white 5px;
+    border-right: solid white 5px; }
+    #result-cmp #result-sequences .tab-result-sequence {
+      display: inline-block;
+      border-bottom: dashed lightgrey 2px;
+      margin: 5px 0 5px 0;
+      font-family: "Courier New", "monospace";
+      font-size: 23px;
+      background-color: #ffffff;
+      height: 70px;
+      line-height: 70px; }
+    #result-cmp #result-sequences .tab-result-sequence:last-child {
+      margin-bottom: 10px; }
+  #result-cmp #result-sequences:empty {
+    display: none; }
+  #result-cmp #result-slider {
+    margin-top: 20px; }
 
 /*# sourceMappingURL=UIComponents.css.map */
