--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -115,7 +115,7 @@
 #sequence-input-cmp {
   background-color: $main-bg-color; //#e9e9e9;
 
-  #sequence-tabs {
+  /*#sequence-tabs {
     ul.tabs {
       margin: 0px;
       padding: 0px;
@@ -153,7 +153,7 @@
         padding-bottom: 10px;
       }
     }
-  }
+  }*/
 
   .controls {
     border: 2px solid $sequence-input-borders;//#999;
@@ -188,53 +188,80 @@
 }
 
 #result-cmp {
-  //display: inline-block;
+  position: relative;
+  #result-tabs{
+    width: $resultTab-width;
+    position: absolute;
 
-  .tab-result {
-    height: $resultTab-height;
-    line-height: $resultTab-height;
+    .tab-result {
+      height: $resultTab-height;
+      line-height: $resultTab-height;
+      margin: 5px 0 10px 0;
 
-    margin: 1em 0 1em 0;
-
-    .tab-result-name {
-      font-size: 15px;
-      float: left;
-      height: inherit;
-      width: 3em;
-
-      border: 2px solid $sequence-input-borders;//#999;
+      border: 2px solid $sequence-input-borders; //#999;
       border-top-left-radius: 5px;
       border-bottom-left-radius: 5px;
       border-right: none;
 
-      background: none;
-      color: #222;
-      display: inline-block;
-      cursor: pointer;
+      .tab-result-name {
+        font-size: 15px;
+        float: left;
+        height: inherit;
+        width: 3em;
 
-      text-align: left;
-      text-decoration: none;
-      outline: none;
-      padding-left: 0.3em;
+        background: none;
+        color: #222;
+        display: inline-block;
+        cursor: pointer;
 
+        text-align: left;
+        text-decoration: none;
+        outline: none;
+        padding-left: 0.3em;
+
+      }
     }
 
-    .tab-result-sequence {
-      font-family: "Courier New", "Times New Roman";
-      font-size: 23px;
-      margin-left: 3em;
-      background-color: #ffffff;
-      height: inherit;
-      line-height: inherit;
+    .current-tab {
+      background-color: $topNav-primaryMenuBackground;
     }
   }
 
-  .current-tab-result {
-    border-bottom-color: #e9e9e9;
-    background-color: #e9e9e9;
+  #result-sequences {
+    margin-left: $resultTab-width + 5px;
+    margin-top: 5px;
+    top: 0;
+    left: 0;
 
-    top: 6px;
-    padding-bottom: 10px;
+    overflow-x: scroll;
+    background-color: white;
+    border-radius: 5px;
+    border-left: solid white 5px;
+    border-right: solid white 5px;
+
+    .tab-result-sequence {
+      display: inline-block;
+      border-bottom: dashed lightgrey 2px;
+      margin: 5px 0 5px 0;
+
+      font-family: "Courier New", "monospace";
+      font-size: 23px;
+      background-color: #ffffff;
+      height: $resultTab-height;
+      line-height: $resultTab-height;
+    }
+
+    .tab-result-sequence:last-child {
+      margin-bottom: 10px;
+    }
+  }
+
+  #result-sequences:empty {
+    display: none;
+  }
+
+  #result-slider{
+    margin-top: 20px;
   }
 }
 
