--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -46,7 +46,7 @@ $sequence-input-borders:#A3A3A3;
 
 
 //sequenceInput
-$sideTab-width: 200px;
+$resultTab-width: 75px;
 $resultTab-height: 70px;
 
 //global features
