Update LICENSE DataTables 1.10.15
-Branch with sequence Tabs

Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>
-Added scrollbar library. Visual changes

Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/pSlider.css
+++ b/css/pSlider.css
@@ -25,13 +25,13 @@
         width: 80px; }
 
 .noUi-pips {
-  color: #797979; }
+  color: black; }
 
 .noUi-pips-large {
-  color: #797979; }
+  color: black; }
 
 .noUi-marker {
-  background: #797979; }
+  background: black; }
 
 .noUi-connect {
   background: #a3a3a3; }
