--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -2,7 +2,7 @@
   margin-top: 10px;
   background-color: #ededf2;
   border-radius: 10px;
-  border: 1px solid #A3A3A3;
+  border: 1px solid #a3a3a3;
   border-top: none;
   min-width: 500px; }
   .suggestions .suggestion {
@@ -24,7 +24,7 @@
     display: inline-block;
     padding: 4px;
     margin: 4px;
-    background-color: white;
+    background-color: #ededf2;
     border: 1px solid black;
     border-radius: 10px;
     font-family: "Gotham Rounded SSm A", "Gotham Rounded SSm B";
@@ -50,13 +50,13 @@
       padding: 2px 8px 2px 2px;
       border-radius: 10px;
       border: 1px solid black;
-      background-color: white; }
+      background-color: #ededf2; }
       #motif-list-selected-cmp #motif-list-selected .chosen-motif .motif-title {
         display: inline-block;
         padding: 4px;
         margin: 4px;
         vertical-align: middle;
-        background-color: white;
+        background-color: #ededf2;
         border: 2px transparent solid;
         border-radius: 5px;
         font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B";
@@ -65,7 +65,7 @@
       #motif-list-selected-cmp #motif-list-selected .chosen-motif .sp-replacer {
         border-radius: inherit;
         border: none;
-        background-color: white; }
+        background-color: #ededf2; }
     #motif-list-selected-cmp #motif-list-selected .motif-result-hover .motif-title {
       border-color: salmon; }
   #motif-list-selected-cmp #motif-list-selected:empty {
@@ -99,7 +99,7 @@
         .tab-name {
           text-decoration: none;
           color: inherit;
-          padding: 0.75em 1.25em;
+          padding: 0.1em 1.4em 0.1em 1em;
         }
       }
 
@@ -113,18 +113,18 @@
     }
   }*/ }
   #sequence-input-cmp .controls {
-    border: 2px solid #A3A3A3;
+    border: 2px solid #a3a3a3;
     border-radius: 2px;
-    background-color: #ededf2;
+    background-color: #dadada;
     padding: 15px; }
     #sequence-input-cmp .controls .button-container {
       display: inline-block;
-      border: 2px solid #A3A3A3;
+      border: 2px solid #a3a3a3;
       border-radius: 5px;
       background-color: #dadada; }
       #sequence-input-cmp .controls .button-container .interface-button {
         outline: none;
-        border-right: 2px solid #A3A3A3;
+        border-right: 2px solid #a3a3a3;
         margin: 0;
         text-align: center; }
         #sequence-input-cmp .controls .button-container .interface-button span {
@@ -142,7 +142,7 @@
       height: 70px;
       line-height: 70px;
       margin: 5px 0 10px 0;
-      border: 2px solid #A3A3A3;
+      border: 2px solid #a3a3a3;
       border-top-left-radius: 5px;
       border-bottom-left-radius: 5px;
       border-right: none; }
