--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -158,7 +158,7 @@
   .controls {
     border: 2px solid $sequence-input-borders;//#999;
     border-radius: 2px;
-    background-color: $topNav-primaryMenuBackground;
+    background-color: $main-bg-color;
     padding: 15px;
 
     .button-container{
