--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -35,7 +35,7 @@ ul {
     .nav > li > a {
       padding: 10px 10px;
       display: inline-block;
-      color: #797979;
+      color: black;
       font-weight: 500;
       text-align: center;
       text-decoration: none; }
@@ -62,7 +62,7 @@ ul {
       .nav > li > .sub-nav > li a {
         display: block;
         padding: 10px 10px;
-        color: #797979;
+        color: black;
         text-decoration: none; }
   .nav > .search-container {
     padding: 10px 24px 10px 10px;
@@ -77,7 +77,7 @@ ul {
       border-radius: 5px;
       outline: none;
       background: #ededf2;
-      color: #797979;
+      color: black;
       font-size: 15px; }
 
 /* Active State */
