--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -1,13 +1,12 @@
 .suggestions {
   margin-top: 10px;
-  background-color: #ededf2;
+  background-color: #dadada;
   border-radius: 10px;
-  border: 1px solid #a3a3a3;
-  border-top: none;
+  border: 1px solid black;
   min-width: 500px; }
   .suggestions .suggestion {
     min-height: 46px;
-    border-top: 1px solid white;
+    border-top: 1px solid black;
     border-radius: 0;
     padding: 2px;
     margin: 2px; }
@@ -24,7 +23,7 @@
     display: inline-block;
     padding: 4px;
     margin: 4px;
-    background-color: #ededf2;
+    background-color: white;
     border: 1px solid black;
     border-radius: 10px;
     font-family: "Gotham Rounded SSm A", "Gotham Rounded SSm B";
@@ -49,15 +48,15 @@
       margin: 0 5px 5px 5px;
       padding: 2px 8px 2px 2px;
       border-radius: 10px;
-      border: 1px solid black;
-      background-color: #ededf2; }
+      border: 2px solid black;
+      background-color: white; }
       #motif-list-selected-cmp #motif-list-selected .chosen-motif .motif-title {
         display: inline-block;
         padding: 4px;
         margin: 4px;
         vertical-align: middle;
-        background-color: #ededf2;
-        border: 2px transparent solid;
+        background-color: white;
+        border: 3px transparent solid;
         border-radius: 5px;
         font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B";
         font-size: 16px;
@@ -65,14 +64,14 @@
       #motif-list-selected-cmp #motif-list-selected .chosen-motif .sp-replacer {
         border-radius: inherit;
         border: none;
-        background-color: #ededf2; }
+        background-color: white; }
     #motif-list-selected-cmp #motif-list-selected .motif-result-hover .motif-title {
       border-color: salmon; }
   #motif-list-selected-cmp #motif-list-selected:empty {
     display: none; }
 
 #sequence-input-cmp {
-  background-color: #dadada;
+  background-color: #ededf2;
   /*#sequence-tabs {
     ul.tabs {
       margin: 0px;
@@ -113,25 +112,26 @@
     }
   }*/ }
   #sequence-input-cmp .controls {
-    border: 2px solid #a3a3a3;
     border-radius: 2px;
-    background-color: #dadada;
-    padding: 15px; }
+    background-color: #ededf2;
+    padding: 5px;
+    margin-bottom: 10px; }
     #sequence-input-cmp .controls .button-container {
       display: inline-block;
-      border: 2px solid #a3a3a3;
-      border-radius: 5px;
-      background-color: #dadada; }
+      background-color: #ededf2; }
       #sequence-input-cmp .controls .button-container .interface-button {
         outline: none;
-        border-right: 2px solid #a3a3a3;
+        border: 1px solid black;
+        border-left: none;
+        border-radius: 5px;
+        background-color: white;
         margin: 0;
         text-align: center; }
         #sequence-input-cmp .controls .button-container .interface-button span {
           display: inline-block;
           width: 150px; }
-      #sequence-input-cmp .controls .button-container .interface-button:last-child {
-        border-right: none; }
+      #sequence-input-cmp .controls .button-container .interface-button:first-child {
+        border-left: 1px solid black; }
 
 #result-cmp {
   position: relative; }
@@ -142,7 +142,7 @@
       height: 70px;
       line-height: 70px;
       margin: 5px 0 10px 0;
-      border: 2px solid #a3a3a3;
+      border: 2px solid black;
       border-top-left-radius: 5px;
       border-bottom-left-radius: 5px;
       border-right: none; }
@@ -160,7 +160,7 @@
         outline: none;
         padding-left: 0.3em; }
     #result-cmp #result-tabs .current-tab {
-      background-color: #ededf2; }
+      background-color: white; }
   #result-cmp #result-sequences {
     margin-left: 80px;
     margin-top: 5px;
@@ -169,8 +169,9 @@
     overflow-x: scroll;
     background-color: white;
     border-radius: 5px;
-    border-left: solid white 5px;
-    border-right: solid white 5px; }
+    border: solid 2px black;
+    border-left: none;
+    border-bottom: none; }
     #result-cmp #result-sequences .tab-result-sequence {
       display: inline-block;
       border-bottom: dashed lightgrey 2px;
@@ -180,8 +181,6 @@
       background-color: #ffffff;
       height: 70px;
       line-height: 70px; }
-    #result-cmp #result-sequences .tab-result-sequence:last-child {
-      margin-bottom: 10px; }
   #result-cmp #result-sequences:empty {
     display: none; }
   #result-cmp #result-slider {
