--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -17,9 +17,9 @@ ul {
   margin: 0 0 10px 0;
   padding: 0 10px;
   position: fixed;
-  background: #ededf2;
+  background: #dadada;
   font-family: "Lato", sans-serif;
-  box-shadow: 0 1px 1px 0 white; }
+  box-shadow: 0 1px 1px 0 black; }
   .nav-bar > .the-nav {
     height: 80px; }
 
@@ -55,8 +55,8 @@ ul {
       display: none;
       width: 180px;
       min-width: 150px;
-      box-shadow: 0 1px 1px 0 white;
-      background-color: #ededf2;
+      box-shadow: 0 1px 1px 0 black;
+      background-color: #dadada;
       z-index: 1;
       border-radius: 5px; }
       .nav > li > .sub-nav > li a {
@@ -71,12 +71,13 @@ ul {
       display: inline-block;
       width: 320px;
       padding-left: 5px;
-      border: 0 solid #A7A7A7;
+      border: 0 solid;
+      border-bottom: 1px solid black;
       -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
       border-radius: 5px;
       outline: none;
-      background: #ededf2;
+      background: #dadada;
       color: black;
       font-size: 15px; }
 
@@ -92,7 +93,7 @@ ul {
 .nav > li > .sub-nav > li:hover a {
   background: #ff8358;
   box-shadow: 0 1px 1px 0 #ff8358;
-  color: #ededf2;
+  color: #dadada;
   border-radius: 5px; }
 
 .pull-left {
