--- a/css/navigationTopBar.scss
+++ b/css/navigationTopBar.scss
@@ -91,7 +91,8 @@ ul {
       width: 320px;
       padding-left: 5px;
 
-      border: 0 solid #A7A7A7;
+      border: 0 solid;
+      border-bottom: 1px solid black;
       -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
       border-radius: 5px;
