--- a/css/pSlider.css
+++ b/css/pSlider.css
@@ -1,9 +1,9 @@
 .sliderBox {
-  padding: 10px;
-  height: 120px; }
+  padding: 10px 10px 10px 10px; }
   .sliderBox #log-slider {
     display: inline-block;
-    width: 700px; }
+    width: 700px;
+    margin-top: 5px; }
   .sliderBox .inputBox {
     display: inline-block;
     position: relative;
@@ -16,13 +16,15 @@
         left: 5px;
         width: 110px; }
       .sliderBox .inputBox .inputUnit .input {
+        padding: 5px;
         position: relative;
         left: 5px;
-        border: 5px solid white;
+        border: 1px solid black;
         border-radius: 5px;
         color: black;
         font-weight: bold;
-        width: 80px; }
+        width: 80px;
+        height: 40px; }
 
 .noUi-pips {
   color: black; }
