--- a/css/pSlider.scss
+++ b/css/pSlider.scss
@@ -1,12 +1,12 @@
 @import "utilities/variables";
 
 .sliderBox {
-  padding: 10px;
-  height: 120px;
+  padding: 10px 10px 10px 10px;
 
   #log-slider {
     display: inline-block;
     width: 700px;
+    margin-top: 5px;
   }
 
   .inputBox {
@@ -25,13 +25,18 @@
       }
 
       .input {
+        padding: 5px;
+
         position: relative;
         left: 5px;
-        border: 5px solid white;
+        border: 1px solid $sequence-input-borders;
         border-radius: 5px;
+
         color:black;
         font-weight:bold;
+
         width: 80px;
+        height: 40px;
       }
     }
   }
