--- a/css/controlElements.css
+++ b/css/controlElements.css
@@ -30,7 +30,8 @@ Example: <a href="#" class="close">
   float: right; }
 
 .tab-result .close {
-  position: absolute; }
+  position: absolute;
+  right: 6px; }
 
 .tab-link .close {
   display: none;
@@ -67,5 +68,17 @@ Example: <a href="#" class="add">
 .tab-link .add {
   right: 0.5em;
   position: absolute; }
+
+/*Lock element
+Example: <a href="#" class="lock">
+*/
+.tab-result .lock {
+  position: absolute;
+  right: 4px;
+  display: inline-block;
+  margin-top: 35px;
+  width: 24px;
+  height: 24px;
+  line-height: 24px; }
 
 /*# sourceMappingURL=controlElements.css.map */
