--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -7,6 +7,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  outline: none;
 }
 
 html {
@@ -69,7 +70,7 @@ body {
 
 //toggled classes
 .full-screen {
-  line-height: $resultTab-height * 0.4 !important;
+  line-height: $resultTab-height * 0.45 !important;
   min-height: 12 + 80 * 4px !important;
   word-break: break-all;
   border-bottom: none !important;
@@ -82,9 +83,10 @@ body {
     word-wrap: normal;
   }
 
-  :first-child .flattened {
+  .flattened:first-of-type {
     margin-top: 0px !important;
-    height: 68px !important;
+    line-height: $resultTab-height - 2px !important;
+    height: $resultTab-height - 2px !important
   }
 }
 
